// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Divider Defaults smoke-test 1`] = `
<div data-test-block="true">
  <hr class="_divider_1k5th_1"
      data-variant="default"
      data-spacing-top="s"
      data-spacing-bottom="s"
  >
</div>
`;

exports[`Tester/Divider IsHRElement play-test 1`] = `
<div data-test-block="true">
  <hr class="_divider_1k5th_1"
      data-variant="default"
      data-spacing-top="s"
      data-spacing-bottom="s"
  >
</div>
`;

exports[`Tester/Divider WithAriaHidden play-test 1`] = `
<div data-test-block="true">
  <hr class="_divider_1k5th_1"
      aria-hidden="true"
      data-variant="default"
      data-spacing-top="s"
      data-spacing-bottom="s"
  >
</div>
`;

exports[`Tester/Divider WithAttributes play-test 1`] = `
<div data-test-block="true">
  <hr id="htmlId"
      lang="nb"
      data-testid="123ID"
      class="_divider_1k5th_1 dummyClassname"
      data-variant="default"
      data-spacing-top="s"
      data-spacing-bottom="s"
  >
</div>
`;

exports[`Tester/Divider WithRef play-test 1`] = `
<div data-test-block="true">
  <hr class="_divider_1k5th_1"
      data-variant="default"
      data-spacing-top="s"
      data-spacing-bottom="s"
      id="dummyIdForwardedFromRef"
  >
</div>
`;

exports[`Tester/Divider WithSubtle smoke-test 1`] = `
<div data-test-block="true">
  <hr class="_divider_1k5th_1"
      data-variant="subtle"
      data-spacing-top="s"
      data-spacing-bottom="s"
  >
</div>
`;
